--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -42,6 +42,7 @@ $navBgColors: (
     height:54px;
     width:303px;
     padding: 5px 60px 5px 15px;
+    transition:0.5s;
 }
 
 .btn-search-input .btn{
@@ -193,6 +194,7 @@ $navBgColors: (
     line-height: 1.42857143;
     color: #555;
     margin-bottom:20px;
+    transition: 0.5s;
 }
 
 .searchbar .btn{
