--- a/scss/modules/_banner.scss
+++ b/scss/modules/_banner.scss
@@ -1,13 +1,64 @@
 @use "sass:map";
 
-.slide-item{
-    display: flex;
-    min-height: 550px;
+.banner{
+    transition:0.5s;
+}
+
+#tns1-item0{
     background: 
         linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
         url("../images/home-banner.webp") 
         center/cover no-repeat;
 }
+#tns1-item1{
+    background: 
+        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url("../images/banner2.jpg") 
+        center/cover no-repeat;
+}
+#tns1-item2{
+    background: 
+        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url("../images/banner3.webp") 
+        center/cover no-repeat;
+}
+#tns1-item3{
+    background: 
+        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url("../images/banner4.webp") 
+        center/cover no-repeat;
+}
+#tns1-item4{
+    background: 
+        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url("../images/banner5.webp") 
+        center/cover no-repeat;
+}
+#tns1-item5{
+    background: 
+        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url("../images/banner6.jpg") 
+        center/cover no-repeat;
+}
+
+#tns1-item6{
+    background: 
+        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url("../images/banner7.webp") 
+        center/cover no-repeat;
+}
+
+#tns1-item7{
+    background: 
+        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url("../images/banner8.webp") 
+        center/cover no-repeat;
+}
+
+.slide-item{
+    display: flex;
+    min-height: 550px;
+}    
 
 .slide-text{
     display:flex;
@@ -44,7 +95,7 @@
     
 }
 
-.tns-outer{
+#tns1-ow{
     min-height:550px;
 }
 
@@ -53,7 +104,7 @@
     justify-content:center;
     align-items: center;
     margin-top: -50px;
-    z-index: 9;
+    z-index: 2;
     position: relative;
 }
 
@@ -77,7 +128,7 @@
         position: relative;
         top: -7px;
         left: -7px;
-        z-index: 10;
+        z-index: 2;
         width: 26px;
         height: 26px;
         border: 2px solid rgba(255, 255, 255, 0.911);
@@ -85,9 +136,6 @@
         border-radius: 50%;
     }
 }
-
-
-
 
 @media (min-width:map.get($breakpoints,"xs")){
     .slide-text{
@@ -130,7 +178,7 @@
             text-align:left;
             font-size: 4rem;
             line-height: 5rem;
-            margin: 0 auto;
+            margin: 0;
         }
         & p{
             font-size: 1.625rem;
