--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -189,6 +189,17 @@ header {
     }
 }
 
+.btn-disabled{ 
+    background-color: $white;
+    color: #aaa;
+    border: 1px solid #f0f0f0;
+
+    &:hover{
+        background-color: $white;
+        color: #aaa;
+    }
+}
+
 .btn-toggle .hamburger, .btn-toggle .hamburger::before, .btn-toggle .hamburger::after {
     width: 30px;
     height: 4px;
