--- a/scss/modules/_cookie.scss
+++ b/scss/modules/_cookie.scss
@@ -63,6 +63,7 @@
     height: 100%;
     background-color: rgba(0,0,0,0);
     z-index: 5; 
+    overflow-y: scroll;
 
     &.active {
         visibility: visible;
