--- a/css/application.css
+++ b/css/application.css
@@ -467,6 +467,10 @@ header {
   outline: 0;
 }
 
+.no-scroll {
+  overflow-y: hidden !important;
+}
+
 .grid {
   display: grid;
   grid-template-columns: 100% 0;
@@ -1953,6 +1957,7 @@ main {
   height: 100%;
   background-color: rgba(0, 0, 0, 0);
   z-index: 5;
+  overflow-y: scroll;
 }
 .cookie-overlay.active {
   visibility: visible;
