upload for peer testing

--- a/css/application.css
+++ b/css/application.css
@@ -330,7 +330,7 @@ header {
   color: #ffffff;
 }
 .btn-marketing:hover {
-  background-color: #2ecc71;
+  background-color: #25a25a;
   color: #ffffff;
 }
 
@@ -339,7 +339,7 @@ header {
   color: #ffffff;
 }
 .btn-services:hover {
-  background-color: #d64541;
+  background-color: #bc2c28;
   color: #ffffff;
 }
 
@@ -348,7 +348,7 @@ header {
   color: #ffffff;
 }
 .btn-design:hover {
-  background-color: #926fb1;
+  background-color: #79539a;
   color: #ffffff;
 }
 
@@ -357,7 +357,7 @@ header {
   color: #ffffff;
 }
 .btn-security:hover {
-  background-color: #f62459;
+  background-color: #de093f;
   color: #ffffff;
 }
 
